@startuml
class com.example.ex0231.ex2.Light {
- boolean isEngine
+ boolean isEngine()
+ void setEngine(boolean)
+ String toString()
}


class com.example.ex0231.ex2.Vehicles {
- int number
- int age
- int numberOfWheels
- String steeringType
- int pollutantEmissionsPerMinute
+ int getNumber()
+ void setNumber(int)
+ int getAge()
+ void setAge(int)
+ int getNumberOfWheels()
+ void setNumberOfWheels(int)
+ String getSteeringType()
+ void setSteeringType(String)
+ int getPollutantEmissionsPerMinute()
+ void setPollutantEmissionsPerMinute(int)
+ double exhaust()
+ String toString()
}


class com.example.ex0231.ex2.MyTruck {
- String color
+ String getColor()
+ void setColor(String)
+ String toString()
}


class com.example.ex0231.ex2.Regular {
- int numberOfPassengers
+ int getNumberOfPassengers()
+ void setNumberOfPassengers(int)
+ double exhaust()
+ int noise()
+ void hitchhikers()
+ String toString()
}


class com.example.ex0231.ex2.Tractor {
- String typeOfTrailers
+ String getTypeOfTrailers()
+ void setTypeOfTrailers(String)
+ String toString()
}


class com.example.ex0231.ex2.Cart {
- int chargingTime
+ int getChargingTime()
+ void setChargingTime(int)
+ double exhaust()
+ void hitchhikers()
+ String toString()
}


class com.example.ex0231.ex2.Main {
+ {static} void main(String[])
+ {static} double sumExhaust(Vehicles[])
+ {static} void theNoise(Vehicles[])
+ {static} int sumPassengers(Vehicles[])
+ {static} int numOfLongTime(Vehicles[])
}

class com.example.ex0231.ex2.Bicycle {
- boolean isBasket
+ boolean isBasket()
+ void setBasket(boolean)
+ String toString()
}


class com.example.ex0231.ex2.MyCar {
- String color
+ String getColor()
+ void setColor(String)
+ String toString()
}


class com.example.ex0231.ex2.Kibbutz {
~ int mone
~ Vehicles[] vehic
+ void addCar(Vehicles)
- Vehicles[] above15AndIsWheel()
- int isLightAndIsWheel()
}


class com.example.ex0231.ex2.Heavy {
- int numberOfMaxTrailers
+ int getNumberOfMaxTrailers()
+ void setNumberOfMaxTrailers(int)
+ double exhaust()
+ String toString()
}


class com.example.ex0231.ex2.Truck {
- int maxLoadingWeight
+ int getMaxLoadingWeight()
+ void setMaxLoadingWeight(int)
+ double exhaust()
+ String toString()
}




com.example.ex0231.ex2.Vehicles <|-- com.example.ex0231.ex2.Light
com.example.ex0231.ex2.Truck <|-- com.example.ex0231.ex2.MyTruck
com.example.ex0231.ex2.Vehicles <|-- com.example.ex0231.ex2.Regular
com.example.ex0231.ex2.Heavy <|-- com.example.ex0231.ex2.Tractor
com.example.ex0231.ex2.Light <|-- com.example.ex0231.ex2.Cart
com.example.ex0231.ex2.Light <|-- com.example.ex0231.ex2.Bicycle
com.example.ex0231.ex2.Regular <|-- com.example.ex0231.ex2.MyCar
com.example.ex0231.ex2.Vehicles <|-- com.example.ex0231.ex2.Heavy
com.example.ex0231.ex2.Heavy <|-- com.example.ex0231.ex2.Truck
@enduml